--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -11,6 +11,17 @@ jobs:
 
       - checkout
       
+      - restore_cache:
+          keys:
+          - v0.0.1-{{ checksum "pom.xml" }}-{{ checksum "drift-core/pom.xml" }}-{{ checksum "drift-server/pom.xml" }}
+          - v0.0.1-
+
+      - run: mvn --fail-never dependency:go-offline || true
+
+      - save_cache:
+          paths:
+            - ~/.m2
+
       - run: mvn package
       
       - store_artifacts:
