--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -26,7 +26,7 @@ jobs:
             - ~/.m2
           key: v0.0.1-{{ checksum "pom.xml" }}-{{ checksum "drift-core/pom.xml" }}-{{ checksum "drift-server/pom.xml" }}
 
-      - run: mvn install
+      - run: mvn install -Pintegration-build
       
       - store_artifacts:
           path: drift-core/target/drift-core-0.0.1-SNAPSHOT.jar
