--- a/drift-server/src/main/app/package.json
+++ b/drift-server/src/main/app/package.json
@@ -4,7 +4,10 @@
   "private": true,
   "dependencies": {
     "@storybook/addon-knobs": "^4.1.6",
+    "apollo-boost": "^0.1.23",
+    "graphql": "^14.1.0",
     "react": "^16.7.0",
+    "react-apollo": "^2.3.3",
     "react-dom": "^16.7.0",
     "react-redux": "^6.0.0",
     "react-scripts": "2.1.3"
