--- a/drift-core/pom.xml
+++ b/drift-core/pom.xml
@@ -19,5 +19,10 @@
 	</properties>
 
 	<dependencies>
+		<dependency>
+			<groupId>com.fasterxml.jackson.core</groupId>
+			<artifactId>jackson-databind</artifactId>
+			<version>2.8.8</version>
+		</dependency>
 	</dependencies>
 </project>
