--- a/drift-server/pom.xml
+++ b/drift-server/pom.xml
@@ -4,7 +4,7 @@
 	<parent>
 		<groupId>io.drift</groupId>
 		<artifactId>drift-parent</artifactId>
-		<version>0.0.1-SNAPSHOT</version>
+		<version>0.0.2-SNAPSHOT</version>
 	</parent>
 	<modelVersion>4.0.0</modelVersion>
 
@@ -18,24 +18,14 @@
 		<maven.compiler.target>1.8</maven.compiler.target>
 		<project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
 		<project.reporting.outputEncoding>UTF-8</project.reporting.outputEncoding>
-
-		<!-- micronaut -->
-		<micronaut.version>1.0.3</micronaut.version>
-		<jdk.version>1.8</jdk.version>
-		<exec.mainClass>hello.world.Application</exec.mainClass>
-
-		<!-- react frontend -->
-		<frontend-maven-plugin.version>1.6</frontend-maven-plugin.version>
-
 	</properties>
 
 	<dependencyManagement>
 		<dependencies>
-			<!-- micronaut -->
 			<dependency>
-				<groupId>io.micronaut</groupId>
-				<artifactId>micronaut-bom</artifactId>
-				<version>${micronaut.version}</version>
+				<groupId>com.giffing.wicket.spring.boot.starter</groupId>
+				<artifactId>wicket-spring-boot-starter</artifactId>
+				<version>1.0.10</version>
 				<type>pom</type>
 				<scope>import</scope>
 			</dependency>
@@ -49,230 +39,94 @@
 			<artifactId>drift-core</artifactId>
 		</dependency>
 
-		<!-- micronaut -->
+		<!-- Spring -->
 		<dependency>
-			<groupId>io.micronaut</groupId>
-			<artifactId>micronaut-inject</artifactId>
-			<scope>compile</scope>
+			<groupId>com.giffing.wicket.spring.boot.starter</groupId>
+			<artifactId>wicket-spring-boot-starter</artifactId>
 		</dependency>
 		<dependency>
-			<groupId>io.micronaut</groupId>
-			<artifactId>micronaut-validation</artifactId>
-			<scope>compile</scope>
+			<groupId>org.springframework.boot</groupId>
+			<artifactId>spring-boot-starter-security</artifactId>
+		</dependency>
+		
+
+		<!-- Wicket -->
+		<dependency>
+			<groupId>org.apache.wicket</groupId>
+			<artifactId>wicket-extensions</artifactId>
 		</dependency>
 		<dependency>
-			<groupId>io.micronaut</groupId>
-			<artifactId>micronaut-runtime</artifactId>
-			<scope>compile</scope>
+			<groupId>org.wicketstuff</groupId>
+			<artifactId>wicketstuff-annotation</artifactId>
 		</dependency>
 		<dependency>
-			<groupId>io.micronaut</groupId>
-			<artifactId>micronaut-http-client</artifactId>
-			<scope>compile</scope>
+			<groupId>org.wicketstuff</groupId>
+			<artifactId>wicketstuff-jquery</artifactId>
+			<version>7.9.0</version>
 		</dependency>
+		
+		<!-- Spring DEV tools -->	
 		<dependency>
-			<groupId>io.micronaut</groupId>
-			<artifactId>micronaut-http-server-netty</artifactId>
-			<scope>compile</scope>
-		</dependency>
-		<dependency>
-			<groupId>io.micronaut</groupId>
-			<artifactId>micronaut-inject-java</artifactId>
-			<scope>provided</scope>
-		</dependency>
-		<dependency>
-			<groupId>ch.qos.logback</groupId>
-			<artifactId>logback-classic</artifactId>
-			<version>1.2.3</version>
+			<groupId>org.springframework.boot</groupId>
+			<artifactId>spring-boot-devtools</artifactId>
 			<scope>runtime</scope>
 		</dependency>
-		<dependency>
-			<groupId>junit</groupId>
-			<artifactId>junit</artifactId>
-			<version>4.12</version>
-			<scope>test</scope>
-		</dependency>
-		<dependency>
-			<groupId>org.hamcrest</groupId>
-			<artifactId>hamcrest-all</artifactId>
-			<version>1.3</version>
-			<scope>test</scope>
-		</dependency>
-
-		<!-- GraphQL -->
-		<dependency>
-			<groupId>com.graphql-java</groupId>
-			<artifactId>graphql-java</artifactId>
-			<version>11.0</version>
-		</dependency>
-
 	</dependencies>
 
-	<profiles>
-		<profile>
-			<id>integration-build</id>
-			<build>
-				<plugins>
-					<!-- micronaut -->
-					<plugin>
-						<groupId>org.apache.maven.plugins</groupId>
-						<artifactId>maven-shade-plugin</artifactId>
-						<version>3.1.0</version>
-						<executions>
-							<execution>
-								<phase>package</phase>
-								<goals>
-									<goal>shade</goal>
-								</goals>
-								<configuration>
-									<transformers>
-										<transformer
-											implementation="org.apache.maven.plugins.shade.resource.ManifestResourceTransformer">
-											<mainClass>${exec.mainClass}</mainClass>
-										</transformer>
-										<transformer
-											implementation="org.apache.maven.plugins.shade.resource.ServicesResourceTransformer" />
-									</transformers>
-								</configuration>
-							</execution>
-						</executions>
-					</plugin>
-					<plugin>
-						<groupId>org.codehaus.mojo</groupId>
-						<artifactId>exec-maven-plugin</artifactId>
-						<version>1.6.0</version>
-						<configuration>
-							<executable>java</executable>
-							<arguments>
-								<argument>-noverify</argument>
-								<argument>-XX:TieredStopAtLevel=1</argument>
-								<argument>-classpath</argument>
-								<classpath />
-								<argument>${exec.mainClass}</argument>
-							</arguments>
-						</configuration>
-					</plugin>
-					<!-- react frontend -->
-					<plugin>
-						<groupId>com.github.eirslett</groupId>
-						<artifactId>frontend-maven-plugin</artifactId>
-						<version>${frontend-maven-plugin.version}</version>
-						<executions>
-							<execution>
-								<id>Install Node and Yarn</id>
-								<goals>
-									<goal>install-node-and-yarn</goal>
-								</goals>
-							</execution>
-							<execution>
-								<id>yarn install</id>
-								<goals>
-									<goal>yarn</goal>
-								</goals>
-								<configuration>
-									<arguments>install</arguments>
-								</configuration>
-							</execution>
-
-							<execution>
-								<id>Frontend production build</id>
-								<goals>
-									<goal>yarn</goal>
-								</goals>
-								<configuration>
-									<arguments>run build</arguments>
-								</configuration>
-							</execution>
-						</executions>
-						<configuration>
-							<nodeVersion>v10.14.2</nodeVersion>
-							<yarnVersion>v1.13.0</yarnVersion>
-							<installDirectory>.mvn</installDirectory>
-							<workingDirectory>src/main/app</workingDirectory>
-						</configuration>
-					</plugin>
-					<plugin>
-						<artifactId>maven-resources-plugin</artifactId>
-						<version>3.0.2</version>
-						<executions>
-							<execution>
-								<id>Copy frontend production build to resources</id>
-								<phase>generate-resources</phase>
-								<goals>
-									<goal>copy-resources</goal>
-								</goals>
-								<configuration>
-									<outputDirectory>${basedir}/target/classes/static</outputDirectory>
-									<resources>
-										<resource>
-											<directory>src/main/app/build/</directory>
-											<filtering>true</filtering>
-										</resource>
-									</resources>
-								</configuration>
-							</execution>
-						</executions>
-					</plugin>
-				</plugins>
-				<pluginManagement>
-					<plugins>
-						<plugin>
-							<groupId>org.apache.maven.plugins</groupId>
-							<artifactId>maven-compiler-plugin</artifactId>
-							<version>3.7.0</version>
-							<configuration>
-								<source>${jdk.version}</source>
-								<target>${jdk.version}</target>
-								<encoding>UTF-8</encoding>
-								<compilerArgs>
-									<arg>-parameters</arg>
-								</compilerArgs>
-								<!-- micronaut -->
-								<annotationProcessorPaths>
-									<path>
-										<groupId>io.micronaut</groupId>
-										<artifactId>micronaut-inject-java</artifactId>
-										<version>${micronaut.version}</version>
-									</path>
-									<path>
-										<groupId>io.micronaut</groupId>
-										<artifactId>micronaut-validation</artifactId>
-										<version>${micronaut.version}</version>
-									</path>
-								</annotationProcessorPaths>
-							</configuration>
-							<executions>
-								<execution>
-									<id>test-compile</id>
-									<goals>
-										<goal>testCompile</goal>
-									</goals>
-									<configuration>
-										<!-- micronaut -->
-										<compilerArgs>
-											<arg>-parameters</arg>
-										</compilerArgs>
-										<annotationProcessorPaths>
-											<path>
-												<groupId>io.micronaut</groupId>
-												<artifactId>micronaut-inject-java</artifactId>
-												<version>${micronaut.version}</version>
-											</path>
-											<path>
-												<groupId>io.micronaut</groupId>
-												<artifactId>micronaut-validation</artifactId>
-												<version>${micronaut.version}</version>
-											</path>
-										</annotationProcessorPaths>
-									</configuration>
-								</execution>
-							</executions>
-						</plugin>
-					</plugins>
-				</pluginManagement>
-			</build>
-
-		</profile>
-	</profiles>
+	<build>
+		<!-- wicket -->
+		<resources>
+			<resource>
+				<filtering>false</filtering>
+				<directory>src/main/resources</directory>
+			</resource>
+			<resource>
+				<filtering>false</filtering>
+				<directory>src/main/java</directory>
+				<includes>
+					<include>**</include>
+				</includes>
+				<excludes>
+					<exclude>**/*.java</exclude>
+				</excludes>
+			</resource>
+		</resources>
+		<testResources>
+			<testResource>
+				<filtering>false</filtering>
+				<directory>src/test/resources</directory>
+			</testResource>
+			<testResource>
+				<filtering>false</filtering>
+				<directory>src/test/java</directory>
+				<includes>
+					<include>**</include>
+				</includes>
+				<excludes>
+					<exclude>**/*.java</exclude>
+				</excludes>
+			</testResource>
+		</testResources>
+		<plugins>
+			<!-- less to css compiler -->
+			<plugin>
+				<groupId>org.lesscss</groupId>
+				<artifactId>lesscss-maven-plugin</artifactId>
+				<version>1.7.0.1.1</version>
+				<configuration>
+					<sourceDirectory>${project.basedir}/src/main/java</sourceDirectory>
+					<outputDirectory>${project.basedir}/src/main/java</outputDirectory>
+					<compress>true</compress>
+				</configuration>
+				<executions>
+					<execution>
+						<goals>
+							<goal>compile</goal>
+						</goals>
+					</execution>
+				</executions>
+			</plugin>
+		</plugins>
+	</build>
 
 </project>
