--- a/drift-core-ui/pom.xml
+++ b/drift-core-ui/pom.xml
@@ -7,9 +7,9 @@
 	</parent>
 	<modelVersion>4.0.0</modelVersion>
 
-	<artifactId>drift-server</artifactId>
+	<artifactId>drift-core-ui</artifactId>
 	<packaging>jar</packaging>
-	<name>Drift :: Server</name>
+	<name>Drift :: Core :: UI</name>
 
 	<properties>
 		<java.version>1.8</java.version>
