ci add junit reports for core

--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -28,6 +28,9 @@ jobs:
 
       - run: mvn clean install
       
+      - store_test_results
+          path: drift-core/target/surefire-reports
+      
       - store_artifacts:
           path: drift-core/target/drift-core-0.0.2-SNAPSHOT.jar
             
