ci add junit reports for core

--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -28,7 +28,7 @@ jobs:
 
       - run: mvn clean install
       
-      - store_test_results
+      - store_test_results:
           path: drift-core/target/surefire-reports
       
       - store_artifacts:
