ci add junit reports for core

--- a/pom.xml
+++ b/pom.xml
@@ -93,6 +93,10 @@
 					<useSystemClassLoader>false</useSystemClassLoader>
 				</configuration>
 			</plugin>
+		</plugins>
+	</build>
+	<reporting>
+		<plugins>
 			<plugin>
 				<groupId>org.apache.maven.plugins</groupId>
 				<artifactId>maven-project-info-reports-plugin</artifactId>
@@ -107,6 +111,6 @@
 				<version>3.7.1</version>
 			</plugin>
 		</plugins>
-	</build>
+	</reporting>
 
 </project>
