--- a/drift-runtime/drift-runtime-springboot/pom.xml
+++ b/drift-runtime/drift-runtime-springboot/pom.xml
@@ -50,10 +50,14 @@
 			<groupId>org.wicketstuff</groupId>
 			<artifactId>wicketstuff-annotation</artifactId>
 		</dependency>
+
 		<dependency>
 			<groupId>org.wicketstuff</groupId>
 			<artifactId>wicketstuff-jquery</artifactId>
-			<version>7.9.0</version>
+		</dependency>
+		<dependency>
+			<groupId>de.agilecoders.wicket</groupId>
+			<artifactId>wicket-bootstrap-extensions</artifactId>
 		</dependency>
 
 		<!-- Spring DEV tools -->
