--- a/pom.xml
+++ b/pom.xml
@@ -24,12 +24,23 @@
 
     <dependencyManagement>
         <dependencies>
+            <!-- spring boot wicket -->
             <dependency>
                 <groupId>com.giffing.wicket.spring.boot.starter</groupId>
                 <artifactId>wicket-spring-boot-starter</artifactId>
-                <version>1.0.10</version>
+                <version>2.1.6</version>
                 <type>pom</type>
                 <scope>import</scope>
+            </dependency>
+            <dependency>
+                <groupId>org.wicketstuff</groupId>
+                <artifactId>wicketstuff-jquery</artifactId>
+                <version>8.4.0</version>
+            </dependency>
+            <dependency>
+                <groupId>de.agilecoders.wicket</groupId>
+                <artifactId>wicket-bootstrap-extensions</artifactId>
+                <version>3.0.0-M11</version>
             </dependency>
 
             <!-- core modules -->
