--- a/drift-core/drift-core-domain/pom.xml
+++ b/drift-core/drift-core-domain/pom.xml
@@ -25,6 +25,11 @@
 			<version>2.8.8</version>
 		</dependency>
 		<dependency>
+			<groupId>org.apache.lucene</groupId>
+			<artifactId>lucene-core</artifactId>
+			<version>7.1.0</version>
+		</dependency>
+		<dependency>
 			<groupId>ch.qos.logback</groupId>
 			<artifactId>logback-classic</artifactId>
 			<version>1.2.3</version>
