--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -13,18 +13,20 @@ jobs:
     steps:
 
       - checkout
-      
+      - run:
+          name: Generate cache key
+          command: ./checksum.sh /tmp/checksum.txt
+
       - restore_cache:
           keys:
-          - v0.0.2-{{ checksum "pom.xml" }}-{{ checksum "drift-core/pom.xml" }}-{{ checksum "drift-server/pom.xml" }}
-          - v0.0.2-
+          - v-{{ checksum "/tmp/checksum.txt" }}
 
       - run: mvn --fail-never dependency:go-offline || true
 
       - save_cache:
           paths:
             - ~/.m2
-          key: v0.0.2-{{ checksum "pom.xml" }}-{{ checksum "drift-core/pom.xml" }}-{{ checksum "drift-server/pom.xml" }}
+          key: v-{{ checksum "/tmp/checksum.txt" }}
 
       - run: mvn clean install surefire-report:report
 
