--- a/drift-jdbc/drift-jdbc-springboot/pom.xml
+++ b/drift-jdbc/drift-jdbc-springboot/pom.xml
@@ -18,6 +18,7 @@
 		<project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
 		<maven.compiler.source>1.8</maven.compiler.source>
 		<maven.compiler.target>1.8</maven.compiler.target>
+		<hikaricp-version>3.3.1</hikaricp-version>
 	</properties>
 
 	<dependencies>
@@ -27,6 +28,7 @@
 			<version>4.11</version>
 			<scope>test</scope>
 		</dependency>
+
 		<dependency>
 			<groupId>io.drift</groupId>
 			<artifactId>drift-jdbc-domain</artifactId>
@@ -34,6 +36,12 @@
 		<dependency>
 			<groupId>io.drift</groupId>
 			<artifactId>drift-runtime-springboot</artifactId>
+		</dependency>
+
+		<dependency>
+			<groupId>com.zaxxer</groupId>
+			<artifactId>HikariCP</artifactId>
+			<version>${hikaricp-version}</version>
 		</dependency>
 	</dependencies>
 
