--- a/drift-sample/pom.xml
+++ b/drift-sample/pom.xml
@@ -5,13 +5,13 @@
 	<parent>
 		<groupId>io.drift</groupId>
 		<artifactId>drift-parent</artifactId>
-		<version>0.0.2-SNAPSHOT</version>
+		<version>0.0.2-RC1</version>
 	</parent>
 	<modelVersion>4.0.0</modelVersion>
 
 	<artifactId>drift-sample</artifactId>
 	<packaging>pom</packaging>
-	<version>0.0.2-SNAPSHOT</version>
+	<version>0.0.2-RC1</version>
 
 	<name>Drift :: Sample</name>
 
