--- a/drift-jdbc/drift-jdbc-springboot/pom.xml
+++ b/drift-jdbc/drift-jdbc-springboot/pom.xml
@@ -6,7 +6,7 @@
 	<parent>
 		<groupId>io.drift</groupId>
 		<artifactId>drift-jdbc</artifactId>
-		<version>0.0.2-SNAPSHOT</version>
+		<version>0.0.2-RC1</version>
 	</parent>
 	<modelVersion>4.0.0</modelVersion>
 
