--- a/pom.xml
+++ b/pom.xml
@@ -5,7 +5,7 @@
     <groupId>io.drift</groupId>
     <artifactId>drift-parent</artifactId>
     <packaging>pom</packaging>
-    <version>0.0.2-SNAPSHOT</version>
+    <version>0.0.2-RC1</version>
     <name>Drift :: Parent</name>
 
     <properties>
@@ -47,29 +47,29 @@
             <dependency>
                 <groupId>io.drift</groupId>
                 <artifactId>drift-core</artifactId>
-                <version>0.0.2-SNAPSHOT</version>
+                <version>0.0.2-RC1</version>
             </dependency>
             <dependency>
                 <groupId>io.drift</groupId>
                 <artifactId>drift-core-domain</artifactId>
-                <version>0.0.2-SNAPSHOT</version>
+                <version>0.0.2-RC1</version>
             </dependency>
             <dependency>
                 <groupId>io.drift</groupId>
                 <artifactId>drift-core-springboot</artifactId>
-                <version>0.0.2-SNAPSHOT</version>
+                <version>0.0.2-RC1</version>
             </dependency>
 
             <!-- runtimes -->
             <dependency>
                 <groupId>io.drift</groupId>
                 <artifactId>drift-runtime</artifactId>
-                <version>0.0.2-SNAPSHOT</version>
+                <version>0.0.2-RC1</version>
             </dependency>
             <dependency>
                 <groupId>io.drift</groupId>
                 <artifactId>drift-runtime-springboot</artifactId>
-                <version>0.0.2-SNAPSHOT</version>
+                <version>0.0.2-RC1</version>
             </dependency>
 
             <!-- jdbc modules -->
