--- a/drift-jdbc/pom.xml
+++ b/drift-jdbc/pom.xml
@@ -5,7 +5,7 @@
     <parent>
         <artifactId>drift-parent</artifactId>
         <groupId>io.drift</groupId>
-        <version>0.0.2-RC2</version>
+        <version>0.0.2</version>
     </parent>
     <modelVersion>4.0.0</modelVersion>
 
