separate jackson module for core. filesystem config page contribution. filesystem recording contribution. snapshot summary widget for jdbc and filesystem

--- a/drift-sample/drift-sample-springboot/pom.xml
+++ b/drift-sample/drift-sample-springboot/pom.xml
@@ -18,6 +18,10 @@
             <groupId>io.drift</groupId>
             <artifactId>drift-jdbc-springboot</artifactId>
         </dependency>
+        <dependency>
+            <groupId>io.drift</groupId>
+            <artifactId>drift-filesystem-springboot</artifactId>
+        </dependency>
         <!-- database connection -->
         <dependency>
             <groupId>com.h2database</groupId>
