--- a/drift-sample/drift-sample-springboot/src/main/assembly/structure/store/system/systemdescription.yaml
+++ b/drift-sample/drift-sample-springboot/src/main/assembly/structure/store/system/systemdescription.yaml
@@ -1,40 +1,47 @@
 ---
 
 subSystems:
-- key: PETSDB
-  type: jdbc
-  name: Pets Database
-- key: PRODUCTSDB
-  type: jdbc
-  name: Product Catalog
+  - key: PETSDB
+    type: jdbc
+    name: Pets Database
+  - key: PRODUCTSDB
+    type: jdbc
+    name: Product Catalog
+  - key: fs1
+    type: filesystem
+    name: 'Drive C:'
 
 environments:
-- key: LOCAL
-  name: Local
-- key: DEV
-  name: Develop
+  - key: LOCAL
+    name: Local
+  - key: DEV
+    name: Develop
 
 connectionDetails:
-  
+
   PETSDB::LOCAL: !<JDBCConnectionDetails>
-  
+
     userName: user1
     password: pwd
     jdbcUrl: jdbc:h2:tcp://localhost/./test
 
     tableNames:
-    - OWNERS
-    - PETS
-    - VETS
+      - OWNERS
+      - PETS
+      - VETS
 
   PRODUCTSDB::LOCAL: !<JDBCConnectionDetails>
-  
+
     userName: user1
     password: pwd
     jdbcUrl: jdbc:h2:tcp://localhost/./test2
 
     tableNames:
-    - CUSTOMER
-    - PRODUCT
-    - SUPPLIER
-    
+      - CUSTOMER
+      - PRODUCT
+      - SUPPLIER
+
+  fs1::LOCAL: !<FileSystemSettings>
+    directories:
+      - path: C:\drift-file-system-test\root-folder-1
+      - path: C:\drift-file-system-test\root-folder-2
