--- a/drift-core/drift-core-domain/pom.xml
+++ b/drift-core/drift-core-domain/pom.xml
@@ -4,7 +4,7 @@
 	<parent>
 		<groupId>io.drift</groupId>
 		<artifactId>drift-core</artifactId>
-		<version>0.0.3</version>
+		<version>0.0.4-SNAPSHOT</version>
 	</parent>
 	<modelVersion>4.0.0</modelVersion>
 
