--- a/drift-filesystem/drift-filesystem-domain/pom.xml
+++ b/drift-filesystem/drift-filesystem-domain/pom.xml
@@ -6,7 +6,7 @@
 	<parent>
 		<groupId>io.drift</groupId>
 		<artifactId>drift-filesystem</artifactId>
-		<version>0.0.3</version>
+		<version>0.0.4-SNAPSHOT</version>
 	</parent>
 	<modelVersion>4.0.0</modelVersion>
 
