--- a/drift-sample/drift-sample-springboot/pom.xml
+++ b/drift-sample/drift-sample-springboot/pom.xml
@@ -22,6 +22,10 @@
             <groupId>io.drift</groupId>
             <artifactId>drift-filesystem-springboot</artifactId>
         </dependency>
+        <dependency>
+            <groupId>io.drift</groupId>
+            <artifactId>drift-elasticsearch-springboot</artifactId>
+        </dependency>
         <!-- database connection -->
         <dependency>
             <groupId>com.h2database</groupId>
