--- a/drift-elasticsearch/drift-elasticsearch-springboot/pom.xml
+++ b/drift-elasticsearch/drift-elasticsearch-springboot/pom.xml
@@ -29,6 +29,11 @@
 			<groupId>io.drift</groupId>
 			<artifactId>drift-runtime-springboot</artifactId>
 		</dependency>
+		<dependency>
+			<groupId>org.elasticsearch.client</groupId>
+			<artifactId>elasticsearch-rest-high-level-client</artifactId>
+			<version>6.2.4</version>
+		</dependency>
 	</dependencies>
 
 	<build>
