--- a/drift-runtime/drift-runtime-springboot/pom.xml
+++ b/drift-runtime/drift-runtime-springboot/pom.xml
@@ -1,7 +1,7 @@
 <project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
 	xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/maven-v4_0_0.xsd">
 	<parent>
-		<groupId>io.drift</groupId>
+		<groupId>com.github.driftserver</groupId>
 		<artifactId>drift-runtime</artifactId>
 		<version>0.0.5-SNAPSHOT</version>
 	</parent>
@@ -22,7 +22,7 @@
 	<dependencies>
 		<!-- Drift -->
 		<dependency>
-			<groupId>io.drift</groupId>
+			<groupId>com.github.driftserver</groupId>
 			<artifactId>drift-core-springboot</artifactId>
 		</dependency>
 
