--- a/drift-sample/pom.xml
+++ b/drift-sample/pom.xml
@@ -3,7 +3,7 @@
 	xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/maven-v4_0_0.xsd">
 
 	<parent>
-		<groupId>io.drift</groupId>
+		<groupId>com.github.driftserver</groupId>
 		<artifactId>drift-parent</artifactId>
 		<version>0.0.5-SNAPSHOT</version>
 	</parent>
