--- a/drift-core/drift-core-domain/pom.xml
+++ b/drift-core/drift-core-domain/pom.xml
@@ -2,7 +2,7 @@
 	xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
 	xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/maven-v4_0_0.xsd">
 	<parent>
-		<groupId>io.drift</groupId>
+		<groupId>com.github.driftserver</groupId>
 		<artifactId>drift-core</artifactId>
 		<version>0.0.5-SNAPSHOT</version>
 	</parent>
