--- a/drift-jdbc/drift-jdbc-domain/pom.xml
+++ b/drift-jdbc/drift-jdbc-domain/pom.xml
@@ -4,7 +4,7 @@
 	xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
 	xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
 	<parent>
-		<groupId>io.drift</groupId>
+		<groupId>com.github.driftserver</groupId>
 		<artifactId>drift-jdbc</artifactId>
 		<version>0.0.5-SNAPSHOT</version>
 	</parent>
@@ -26,7 +26,7 @@
 			<artifactId>junit</artifactId>
 		</dependency>
 		<dependency>
-			<groupId>io.drift</groupId>
+			<groupId>com.github.driftserver</groupId>
 			<artifactId>drift-core-domain</artifactId>
 		</dependency>
 		<dependency>
