--- a/drift-runtime/pom.xml
+++ b/drift-runtime/pom.xml
@@ -4,7 +4,7 @@
          xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
     <parent>
         <artifactId>drift-parent</artifactId>
-        <groupId>io.drift</groupId>
+        <groupId>com.github.driftserver</groupId>
         <version>0.0.5-SNAPSHOT</version>
     </parent>
     <modelVersion>4.0.0</modelVersion>
